# shiftsmith

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: create_weekly_schedule.py
src/shiftsmith/: __init__.py  annealing.py  base.py  google.py  linear_prog.py  progress.py  readers.py  shifts.py
